--- a/dark.mode.css
+++ b/dark.mode.css
@@ -201,7 +201,7 @@
 }
 
 .theme-dark .wordmark_a934d8::before {
-    content: "‏‏‎ oily";
+    content: "‏‏‎ ace";
     font-size: 12px;
     font-family: "Poiret one" !important;
     position: fixed;
@@ -217,7 +217,7 @@
 }
 
 .wordmark_a934d8:hover:before {
-    content: "‏‏‎ oily";
+    content: "‏‏‎ ace";
     letter-spacing: 2px;
 }
 
@@ -876,13 +876,13 @@ span:not(.spinner-item) {
     border-radius: 30px;
 }
 
-/*oily appearance theme*/
+/*ace appearance theme*/
 .theme-dark {
     --cl-appearance: "Dark";
 }
 
 #app-mount .info_c5a741 .line_c5a741:last-child:after {
-    content: "Oily " var(--cl-appearance) " 🎮";
+    content: "Ace " var(--cl-appearance) " 🎮";
     display: block;
 }
 
