--- a/dark.mode.css
+++ b/dark.mode.css
@@ -2846,7 +2846,7 @@ button {
     opacity: 0 !important;
 }
 
-/*custom oily theme card*/
+/*custom ace theme card*/
 #Oily-card .bd-name {
     font-size: 100px;
     text-align: left;
