--- a/dark.mode.css
+++ b/dark.mode.css
@@ -944,7 +944,7 @@ span:not(.spinner-item) {
 
 .unreadPill_c2654d {
     background-color: var(--background-shading);
-    color: #fb5454;
+    color: #410000;
     font-size: 12px;
     letter-spacing: 20px;
     right: 50%;
@@ -953,14 +953,14 @@ span:not(.spinner-item) {
 }
 
 .isUnread_c2654d {
-    --divider-color: rgb(237, 0, 255);
+    --divider-color: rgb(251, 84, 84);
     border: none;
     background: linear-gradient(90deg,
-    rgba(237, 0, 255, 1) 0%,
-    #fb5454 25%,
+    rgba(251, 84, 84, 1) 0%,
+    #410000 25%,
     rgba(0, 0, 0, 0) 50%,
-    #fb5454 75%,
-    rgba(254, 0, 255, 1) 100%);
+    #410000 75%,
+    rgba(255, 84, 84, 1) 100%);
     height: 1px;
 }
 
